--- a/ham/xconvers/HISTORY
+++ b/ham/xconvers/HISTORY
@@ -1,3 +1,7 @@
+2008-01-27 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: updated spell to 0.8.3, fixes #12102
+	  fixed WEB_SITE
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
