--- a/kde-apps/ktorrent/HISTORY
+++ b/kde-apps/ktorrent/HISTORY
@@ -1,3 +1,6 @@
+2008-01-27 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 2.2.5
+
 2007-11-23 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.2.4
 
