--- a/utils/dbus-python/HISTORY
+++ b/utils/dbus-python/HISTORY
@@ -1,3 +1,6 @@
+2008-01-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.82.4
+
 2007-10-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.82.3
 
