--- a/python-pypi/tagpy/HISTORY
+++ b/python-pypi/tagpy/HISTORY
@@ -1,3 +1,7 @@
+2008-01-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS, PRE_BUILD: updated to 0.93, cleaned up
+	* DEPENDS: added python as a main dep
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD: removed, default_build_python is default
 	* INSTALL: removed, default_install_python is default
