--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-27 Vlad Glagolev <stealth@sourcemage.org>
+        * lua-forge/lrexlib: new spell, Lua binding of POSIX and PCRE
+	  regular expression libraries
+
 2008-01-26 George Sherwood <george@beernabeer.com>
 	* util/ndesk-dbus: new spell, required for beagle
 	* util/ndeks-dbus-glib: new spell, required for beagle
