--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,7 @@
+2008-01-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++, upstream uploaded a renewed
+	  tarball after my early commit
+
 2008-01-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.02
 
