--- a/lua-forge/lrexlib/INSTALL
+++ b/lua-forge/lrexlib/INSTALL
@@ -1,1 +1,3 @@
-install -m 755 src/*.so* $INSTALL_ROOT/usr/lib/lua/5.1
+local LUA=$(installed_version lua)
+
+install -m 755 src/*.so* $INSTALL_ROOT/usr/lib/lua/${LUA%.?}
