--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2008-01-27 Ismael Luceno <ismael@sourcemage.org>
+	* CONFIGURE, DEPENDS: git-svn depends on term-readkey
+
 2008-01-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.5.3.8
 
