--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-27 Ismael Luceno <ismael@sourcemage.org>
+	* kernels/linux-uvc: new spell, USB Video Class driver
+
 2008-01-27 Vlad Glagolev <stealth@sourcemage.org>
         * lua-forge/lrexlib: new spell, Lua binding of POSIX and PCRE
 	  regular expression libraries
