--- a/net/shorewall-docs-xml/HISTORY
+++ b/net/shorewall-docs-xml/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Elisamuel Resto <ryuji@sourcemage.org>
+	* DETAILS: VERSION updated to 4.0.8
+
 2007-10-24 Elisamuel Resto <ryuji@mages.ath.cx>
 	* DETAILS: VERSION updated to 4.0.5
 
