--- a/audio-players/dermixd/HISTORY
+++ b/audio-players/dermixd/HISTORY
@@ -1,3 +1,7 @@
+2008-01-28 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated to 1.4.0
+	* CONFIGURE, BUILD: added option for linux thread priorities, fixed some typing
+
 2008-01-09 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS, DEPENDS, BUILD: updated to 1.3.0 (added libvorbis dep)
 	* dermixd-*.sig: removed, using upstream file
