--- a/disk/e2fsprogs/HISTORY
+++ b/disk/e2fsprogs/HISTORY
@@ -1,3 +1,7 @@
+2008-01-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.40.5, removed broken mirrors
+	* DEPENDS, INSTALL: cleaned up: removed useless spaces
+
 2008-01-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.40.4
 
@@ -130,4 +134,3 @@
 	  package is dual licensed under both
 	  Updated Version to 1.27 per Marc Greene's <eru@subdimension.com>
 	  notification
-
