--- a/archive/tar/HISTORY
+++ b/archive/tar/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_BUILD: removed is_depends_enabled.function reference
+
 2007-10-23 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.19
 	* PRE_BUILD: Removed patch incorproated upstream
