--- a/audio-creation/linuxsampler/HISTORY
+++ b/audio-creation/linuxsampler/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* BUILD: removed is_depends_enabled.function reference
+
 2007-03-20 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Added KEYWORDS.
 
