--- a/audio-creation/rosegarden/HISTORY
+++ b/audio-creation/rosegarden/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: removed is_depends_enabled.function reference
+
 2007-12-31 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Updated to 1.6.1.
 	* BUILD: Added KDE3 include dir flag, fixes build after recent
