--- a/audio-libs/libgig/HISTORY
+++ b/audio-libs/libgig/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* BUILD: removed is_depends_enabled.function reference
+
 2007-04-04 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Updated to 3.1.1.
 
