--- a/audio-players/alsaplayer/HISTORY
+++ b/audio-players/alsaplayer/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: removed is_depends_enabled.function reference
+
 2007-12-04 Juuso Alasuutari <iuso@sourcemage.org>
 	* alsaplayer_jackdmp.patch, PRE_BUILD: Added patch to fix jackdmp
 	  compatibility.
