--- a/crypto/gnupg-exp/HISTORY
+++ b/crypto/gnupg-exp/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* TRIGGERS: removed is_depends_enabled.function reference
+
 2007-12-20 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.8
 
