--- a/database/postgresql/HISTORY
+++ b/database/postgresql/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* TRIGGERS: removed is_depends_enabled.function reference
+
 2008-01-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 8.2.6, SECURITY_PATCH=5
 
