--- a/devel/swig/HISTORY
+++ b/devel/swig/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_SUB_DEPENDS: removed is_depends_enabled.function reference
+
 2007-12-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.3.33
 
