--- a/disk/udev/HISTORY
+++ b/disk/udev/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* UP_TRIGGERS: removed is_depends_enabled.function reference
+
 2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 118
 	* init.d/coldplug: convert to udevadm usage
