--- a/display/directfb/HISTORY
+++ b/display/directfb/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* BUILD: removed is_depends_enabled.function reference
+
 2007-12-23 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 1.1.1, switched to sha512sum
 	* PRE_BUILD: disabled regeneration of configure
