--- a/gnome2-apps/gedit/HISTORY
+++ b/gnome2-apps/gedit/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: removed is_depends_enabled.function reference
+
 2007-11-29 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.4
 
