--- a/graphics-libs/cegui/HISTORY
+++ b/graphics-libs/cegui/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_SUB_DEPENDS: removed is_depends_enabled.function reference
+
 2008-01-06 Eric Sandall <sandalle@sourcemage.org>
 	* SUB_DEPENDS, PRE_SUB_DEPENDS: Allow forcing of lua (for ember)
 	* SUB_DEPENDS, DEPENDS: Enable tolua++cegui module as well
