--- a/graphics-libs/ogre/HISTORY
+++ b/graphics-libs/ogre/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_SUB_DEPENDS: removed is_depends_enabled.function reference
+
 2008-01-06 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.4.6
 	* PRE_SUB_DEPENDS, SUB_DEPENDS: Allow forcing dependency on cegui
