--- a/kde-apps/kid3/HISTORY
+++ b/kde-apps/kid3/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: removed is_depends_enabled.function reference
+
 2007-09-08 Remko van der Vossen <wich@stack.nl>
 	* PRE_BUILD, BUILD, INSTALL: kid3 uses a new way to support a qt-only
 	  build
