--- a/kde-core/kdebase/HISTORY
+++ b/kde-core/kdebase/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: removed is_depends_enabled.function reference
+
 2007-11-16 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: added force_depends on kdelibs #14082
 
