--- a/kde-core/kdepim/HISTORY
+++ b/kde-core/kdepim/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: removed is_depends_enabled.function reference
+
 2007-10-16  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.5.8
 
