--- a/libs/boost/HISTORY
+++ b/libs/boost/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_SUB_DEPENDS: removed is_depends_enabled.function reference
+
 2008-01-13 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* REPAIR^.*^PRE_SUB_DEPENDS: added to propagate the previous change quicker
 	* PRE_SUB_DEPENDS: handle "all" libs choice
