--- a/net/net-tools/HISTORY
+++ b/net/net-tools/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* BUILD: removed is_depends_enabled.function reference
+
 2008-01-23 Vlad Glagolev <stealth@sourcemage.org>
 	* init.d/network: fixed a weird bug ([DEVICE] was useless, now it works)
 
