--- a/printer/cups/HISTORY
+++ b/printer/cups/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* TRIGGERS: removed is_depends_enabled.function reference
+
 2007-12-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.5
 
