--- a/python-pypi/luca/HISTORY
+++ b/python-pypi/luca/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_BUILD: removed is_depends_enabled.function reference
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS: cleaned up
 
