--- a/spelling/stardict/HISTORY
+++ b/spelling/stardict/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_BUILD: removed is_depends_enabled.function reference
+
 2007-11-11 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 3.0.1
 	* DEPENDS: added libsigc++3 optionally
