--- a/utils/coreutils/HISTORY
+++ b/utils/coreutils/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: removed is_depends_enabled.function reference
+
 2008-01-23 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 6.10, su and hostname are no longer nstalled by default
 	* PRE_BUILD, *patch: removed
