--- a/utils/gnuplot/HISTORY
+++ b/utils/gnuplot/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: removed is_depends_enabled.function reference
+
 2007-08-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* INSTALL: copy missing lua script, add copying to optional part
 
