--- a/x11-libs/libafterimage/HISTORY
+++ b/x11-libs/libafterimage/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: removed is_depends_enabled.function reference
+
 2008-01-19 Arjan Bouter <abouter@sourcemage.org>
 	* WIP: removed after moving history entry to HISTORY
 	       all mentioned stuff in the WIP file were implemented.
