--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* BUILD: removed is_depends_enabled.function reference
+
 2008-01-25 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.9.54
 
