--- a/libs/gettext/HISTORY
+++ b/libs/gettext/HISTORY
@@ -1,3 +1,7 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* BUILD: added missing parameter to the is_depends_enabled call
+	* INSTALL: added missing parameter to the is_depends_enabled call
+
 2007-11-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.17
 
