--- a/utils/console-tools/HISTORY
+++ b/utils/console-tools/HISTORY
@@ -1,4 +1,7 @@
 2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_BUILD: added missing parameter to the is_depends_enabled call
+
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* PRE_BUILD: removed is_depends_enabled.function reference
 
 2007-01-06 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
