--- a/libs/pcre/HISTORY
+++ b/libs/pcre/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 7.6, removed broken mirrors
+
 2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
 	* updated spell to 7.5
 	* DETAILS, DEPENDS: cleaned up via [[...]] and removing
