--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 6.3.8-2
+
 2008-01-24 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 6.3.8-1
 
