--- a/kde-apps/kdesvn/HISTORY
+++ b/kde-apps/kdesvn/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Julien "_kaze_" ROZO <julien@rozo.org>
+	* BUILD: fixed, to use the new kde3 include dir
+
 2007-11-16 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 0.14.1
 
