--- a/e/epdf/HISTORY
+++ b/e/epdf/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Optionally depends on epsilon, ewl and etk
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
