--- a/e/evas/HISTORY
+++ b/e/evas/HISTORY
@@ -1,5 +1,6 @@
 2008-01-28 Eric Sandall <sandalle@sourcemage.org>
-	* DEPENDS: Optionally depends on glitz and sdl
+	* DEPENDS: Optionally depends on glitz
+	  Removed optional dependency on sdl, breaks ecore
 	  glew support is also currently broken
 	  Added gif, tiff, and svg (via cairo) image loader optional dependencies
 	  edb optional depends said it was for PNG, not EDB, image loader
