--- a/python-pypi/pysqlite/HISTORY
+++ b/python-pypi/pysqlite/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.4.1
+
 2007-12-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.4.0, cleaned up,
 	  hash => gpg
