--- a/gnome2-libs/libgnomeprint/HISTORY
+++ b/gnome2-libs/libgnomeprint/HISTORY
@@ -1,3 +1,6 @@
+2008-01-29 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.18.3, cleaned up, fixed SHORT
+
 2007-12-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: libbonobo is useless
 
