--- a/security/shadow/HISTORY
+++ b/security/shadow/HISTORY
@@ -1,3 +1,7 @@
+2008-01-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.1.0, new WEB_SITE and SOURCE_URL[0]
+	* BUILD, shadow-4.0.18.1-useradd-usermod.patch: removed patch
+
 2008-01-24 Ladislav Hagara <hgr@vabo.cz>
 	* DEPENDS: temporarily added coreutils to prevent removing of pam.d/su
 	* DETAILS: PATCHLEVEL=3 to ensure all users have pam.d/su
