--- a/ftp/curl/HISTORY
+++ b/ftp/curl/HISTORY
@@ -1,3 +1,6 @@
+2008-01-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 7.18.0
+
 2007-11-16 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* UP_TRIGGERS: check with readelf, so smgl-ledger doesn't get triggered
 
