--- a/x11-toolkits/gtk+2/HISTORY
+++ b/x11-toolkits/gtk+2/HISTORY
@@ -1,3 +1,6 @@
+2008-01-29 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.12.6
+
 2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[0]
 	  updated spell to 2.12.5
