--- a/gnome2-libs/libidl/HISTORY
+++ b/gnome2-libs/libidl/HISTORY
@@ -1,3 +1,6 @@
+2008-01-29 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.8.10
+
 2008-01-12 Treeve Jelbert <treeve@sourcemage.org>
 	* PRE_BUILD,libIDL-0.8.9-flex_fix.patch: added
 	  fix problem with latest flex
