--- a/database/mysql/HISTORY
+++ b/database/mysql/HISTORY
@@ -1,3 +1,7 @@
+2008-01-29 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 5.0.51a, SECURITY_PATCH=3
+	  http://dev.mysql.com/doc/refman/5.0/en/releasenotes-cs-5-0-51a.html
+
 2007-12-08 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated stable to 5.0.51
 
