--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,6 @@
+2008-01-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.03
+
 2008-01-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++, upstream uploaded a renewed
 	  tarball after my early commit
