--- a/science-libs/octaviz/HISTORY
+++ b/science-libs/octaviz/HISTORY
@@ -1,3 +1,6 @@
+2008-01-30 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	* DETAILS: corrected hashsum
+
 2008-01-28 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS, PREPARE: update to 0.4.6, added cvs version
 
