--- a/audio-players/moc/HISTORY
+++ b/audio-players/moc/HISTORY
@@ -1,3 +1,10 @@
+2008-01-30 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: added ncurses for ordering
+	* BUILD: applied a modified patch from the epilogue of #10376
+
+2007-12-09 Jiri Golembiovsky <golemj@gmail.com>
+	* BUILD: Using --without-ncursesw only when ncurses are compiled without utf8 support.
+
 2007-09-13 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.4.3
 
