--- a/kernels/lm_sensors/HISTORY
+++ b/kernels/lm_sensors/HISTORY
@@ -1,3 +1,7 @@
+2008-01-30 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.0.1
+	* DEPENDS: branch 3 no longer depends on sysfsutils
+
 2008-01-14 Pol Vinogradov <vin.public@gmail.com>
 	* PRE_BUILD, conf-lex.patch: added patch for config lexical analyzer
 
