--- a/utils/coreutils/HISTORY
+++ b/utils/coreutils/HISTORY
@@ -1,3 +1,6 @@
+2008-01-30 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: no longer needs util-linux for kill
+
 2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: removed is_depends_enabled.function reference
 
