--- a/crypto/seahorse/HISTORY
+++ b/crypto/seahorse/HISTORY
@@ -1,3 +1,6 @@
+2008-01-30 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.21.90 (devel)
+
 2008-01-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.20.3 (stable)
 
