--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/csvscan: new spell, Fastest CSV Parser
 	* ruby-raa/color-tools: new spell, Color manipulation utilities
 	* ruby-raa/cmdparse: new spell, Command line parser supporting commands
 	* ruby-raa/audioscrobbler: new spell, Implementation of the Audioscrobbler protocol
