--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2008-02-11 Vlad Glagolev <stealth@sourcemage.org>
+	* latest.defaults: updated to 2.6.24.2
+	* info/patches/maintenance_patches/patch-2.6.24.2: added
+
 2008-02-02 Pol Vinogradov <vin.public@gmail.com>
 	* info/patches/realtime_patches/patch-2.6.24-rt1: added
 	* latests.defaults: set LATEST_realtime_patches=patch-2.6.24-rt1
