--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,6 +1,7 @@
 2008-02-11 Vlad Glagolev <stealth@sourcemage.org>
 	* latest.defaults: updated to 2.6.24.2
 	* info/patches/maintenance_patches/patch-2.6.24.2: added
+	* info/patches/maintenance_patches/patch-2.6.23.16: added
 
 2007-12-23 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to 2.6.24-rc6-mm1
