--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -2,6 +2,7 @@
 	* latest.defaults: updated to 2.6.24.2
 	* info/patches/maintenance_patches/patch-2.6.24.2: added
 	* info/patches/maintenance_patches/patch-2.6.23.16: added
+	* info/patches/maintenance_patches/patch-2.6.22.18: added
 
 2008-02-02 Pol Vinogradov <vin.public@gmail.com>
 	* info/patches/realtime_patches/patch-2.6.24-rt1: added
