--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-11 Eric Sandall <sandalle@sourcemage.org>
+	* libs/libvirt: Added C toolkit for virtualization
+
 2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
 	* ruby-raa/wx_sugar: Corrected misspelled name from wx_ruby.
 
