--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* python-pypi/urlgrabber: Added a Python library for simple file fetching
 	* python-pypi/virtinst: Added a virtual machine installation tool
 	* x11/gtk-vnc: Added a GTK VNC viewer widget
+	* x11/virt-viewer: Added a GTK virtualization viewer
 
 2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
 	* ruby-raa/wx_sugar: Corrected misspelled name from wx_ruby.
