--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* python-pypi/virtinst: Added a virtual machine installation tool
 	* x11/gtk-vnc: Added a GTK VNC viewer widget
 	* x11/virt-viewer: Added a GTK virtualization viewer
+	* utils/virt-manager: Added a virtual machine manager
 
 2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
 	* ruby-raa/wx_sugar: Corrected misspelled name from wx_ruby.
