--- a/libs/nspr/HISTORY
+++ b/libs/nspr/HISTORY
@@ -1,3 +1,9 @@
+2008-02-11 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* INSTALL: Use version as reported by `nspr-config --version` as that
+	  is what gets compared against when looking for mozilla-nspr
+	  Fixes Bug #14308
+
 2008-02-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.7
 	* CONFIGURE, PRE_BUILD, assert.patch: removed patch, applied upstream
@@ -62,3 +68,4 @@
 
 2005-05-12 Sergey Lipnevich <sergey@sourcemage.org>
 	* ALL: spell created; based on files from nss spell.
+
