--- a/utils/fbgetty/HISTORY
+++ b/utils/fbgetty/HISTORY
@@ -1,3 +1,6 @@
+2008-02-12 Dale E. Edmons <linuxfan@sourcemage.org>
+	* PRE_BUILD: Created for patching fbgetty (thanks arachnist).
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
