--- a/mobile/gnokii/HISTORY
+++ b/mobile/gnokii/HISTORY
@@ -1,3 +1,6 @@
+2008-02-12 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: update to 0.6.22
+
 2007-10-28 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 0.6.20
 
