--- a/antivirus/clamav/HISTORY
+++ b/antivirus/clamav/HISTORY
@@ -1,3 +1,6 @@
+2008-02-12 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: version 0.92.1
+
 2007-12-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.92
 
