--- a/utils/bluez-utils/HISTORY
+++ b/utils/bluez-utils/HISTORY
@@ -1,3 +1,6 @@
+2008-02-11 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 3.26
+	
 2008-05-06 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 3.25
 
