--- a/gnome2-apps/bluez-gnome/HISTORY
+++ b/gnome2-apps/bluez-gnome/HISTORY
@@ -1,3 +1,7 @@
+2008-02-12 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 0.20
+	* DEPENDS: added gconf2 and libnotify
+	
 2008-01-06 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 0.15
 
