--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,3 +1,8 @@
+2008-02-12 Eric Sandall <sandalle@sourcemage.org>
+	* INSTALL: Apply enigmail.patch if Enigmail is enabled
+	* enigmail.patch: Patch for Engimail to be registered (Bug #10720)
+	  Probably a better way, but this is the quick fix
+
 2007-11-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.0.9, SECURITY_PATCH=10
 	* mozilla.gpg: updated "Mozilla Software Releases" key
