--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,3 +1,8 @@
+2008-02-12 Eric Sandall <sandalle@sourcemage.org>
+	* INSTALL: Apply enigmail.patch if Enigmail is enabled
+	* enigmail.patch: Patch for Engimail to be registered (Bug #10720)
+	  Probably a better way, but this is the quick fix
+
 2008-02-11 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated Enigmail to 0.95.6
 	  Enigmail SOURCE_URL changed to /download/source from /downloads/src
