--- a/http/xulrunner/HISTORY
+++ b/http/xulrunner/HISTORY
@@ -1,3 +1,7 @@
+2008-02-11 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS, PRE_BUILD, BUILD: Create unique SOURCE_DIRECTORY
+	  Fixes Bug #7977
+
 2007-10-27 Lalo Martins <lalo@sourcemage.org>
 	* BUILD: fix build on non-ia32
 	  (no PATCHLEVEL, as it only makes it buildable for users when it wasn't
@@ -29,3 +33,4 @@
 
 2006-08-29 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, PRE_BULID, BUILD, INSTALL, CONFIGURE, DEPENDS, PROVIDES, HISTORY: created spell
+
