--- a/http/mozilla/HISTORY
+++ b/http/mozilla/HISTORY
@@ -1,3 +1,7 @@
+2008-02-11 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS, PRE_BUILD, BUILD: Create unique SOURCE_DIRECTORY
+	  Fixes Bug #7977
+
 2007-09-29 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* freetype.patch: another fix for a freetype2 api change, some const
 	  were added to functions in freetype
