--- a/utils/fbgetty/HISTORY
+++ b/utils/fbgetty/HISTORY
@@ -1,4 +1,9 @@
 2008-02-12 Dale E. Edmons <linuxfan@sourcemage.org>
+	* DETAILS: Changed to download patch from author's site.
+	* PRE_BUILD: Changed to use SOURCE_CACHE.
+	* fbgetty-0.1.698-gcc41.patch: Removed from repo to use off-site copy.
+
+2008-02-12 Dale E. Edmons <linuxfan@sourcemage.org>
 	* PRE_BUILD: Created for patching fbgetty (thanks arachnist).
 	* fbgetty-0.1.698-gcc41.patch: New.  Corrections for compile errors.
 	*  http://nest.homeunix.net/repos/portage/net-dialup/fbgetty/files
