--- a/kde4/kdelibs4/HISTORY
+++ b/kde4/kdelibs4/HISTORY
@@ -1,3 +1,8 @@
+2008-02-12  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.1
+	  add stable/unstable versions; currently(4.0.1/4.0.61)
+	* PREPARE,EXPORTS,REPAIR^none^EXPORTS: added
+
 2008-02-07  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.61
 	* CONFLICTS: deleted
