--- a/python-pypi/lxml/HISTORY
+++ b/python-pypi/lxml/HISTORY
@@ -1,3 +1,6 @@
+2008-02-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.0.1
+
 2008-02-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.0, hash => gpg
 
