--- a/utils/findutils/HISTORY
+++ b/utils/findutils/HISTORY
@@ -1,3 +1,6 @@
+2008-02-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.2.33
+
 2008-01-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.2.32, marked key as VERIFIED_UPSTREAM_KEY
 
