--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-14 Thomas Orgis <sobukus@sourcemage.org>
+	* video/xjadeo: added JACK-synced video player
+
 2008-02-11 Eric Sandall <sandalle@sourcemage.org>
 	* libs/libvirt: Added C toolkit for virtualization
 	* python-pypi/urlgrabber: Added a Python library for simple file fetching
