--- a/telephony/telepathy-glib/HISTORY
+++ b/telephony/telepathy-glib/HISTORY
@@ -1,3 +1,6 @@
+2008-02-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7.2
+
 2008-02-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.1
 	* DEPENDS: remove libtelepathy
