--- a/telephony/libtelepathy/HISTORY
+++ b/telephony/libtelepathy/HISTORY
@@ -1,3 +1,6 @@
+2008-02-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.3.3
+
 2008-02-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.3.2
 
